compiler/testData/cli/jvm/_diagnosticTests/classAndPartClash.out
compiler/testData/cli/jvm/_diagnosticTests/classAndPartClash.kt:1:1: error: duplicate JVM class name 'test/ClassAndPartClashKt' generated from: ClassAndPartClashKt, ClassAndPartClashKt
package test
^^^^^^^^^^^^
compiler/testData/cli/jvm/_diagnosticTests/classAndPartClash.kt:5:1: error: duplicate JVM class name 'test/ClassAndPartClashKt' generated from: ClassAndPartClashKt, ClassAndPartClashKt
class ClassAndPartClashKt
^^^^^^^^^^^^^^^^^^^^^^^^^
COMPILATION_ERROR
